Bug 488937 - Micro-optimization: avoid useless instantiations
Classic Java rules to improve performances by reducing the amount of
useless instantiation of Number and String for Java 5 and later.
Those rules are reported by SonarQube and Findbugs.

Change-Id: I066775cce99b25106bc793e14ec79116b3d720d5
Signed-off-by: Mickael Istria <mistria@redhat.com>